// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareContact buildVCardFromAzzappContact birthday in date 1`] = `
{
  "charset": "utf-8",
  "contentType": "text/x-vcard",
  "definedElements": {
    "birthday": true,
    "fullname": true,
    "name": true,
  },
  "fileExtension": "vcf",
  "filename": "vcard",
  "multiplePropertiesForElementAllowed": [
    "address",
    "email",
    "phoneNumber",
    "social",
    "url",
  ],
  "properties": [
    {
      "key": "N;CHARSET=utf-8",
      "value": ";;;;",
    },
    {
      "key": "FN;CHARSET=utf-8",
      "value": "",
    },
    {
      "key": "BDAY",
      "value": "2012-03-12",
    },
  ],
  "useVCalendar": false,
}
`;

exports[`ShareContact buildVCardFromAzzappContact empty contact 1`] = `
{
  "charset": "utf-8",
  "contentType": "text/x-vcard",
  "definedElements": {
    "fullname": true,
    "name": true,
  },
  "fileExtension": "vcf",
  "filename": "vcard",
  "multiplePropertiesForElementAllowed": [
    "address",
    "email",
    "phoneNumber",
    "social",
    "url",
  ],
  "properties": [
    {
      "key": "N;CHARSET=utf-8",
      "value": ";;;;",
    },
    {
      "key": "FN;CHARSET=utf-8",
      "value": "",
    },
  ],
  "useVCalendar": false,
}
`;

exports[`ShareContact buildVCardFromAzzappContact full featured contact 1`] = `
{
  "charset": "utf-8",
  "contentType": "text/x-vcard",
  "definedElements": {
    "address": true,
    "birthday": true,
    "company": true,
    "email": true,
    "fullname": true,
    "jobtitle": true,
    "name": true,
    "phoneNumber": true,
    "social": true,
    "url": true,
  },
  "fileExtension": "vcf",
  "filename": "vcard",
  "multiplePropertiesForElementAllowed": [
    "address",
    "email",
    "phoneNumber",
    "social",
    "url",
  ],
  "properties": [
    {
      "key": "N;CHARSET=utf-8",
      "value": "app;azz;;;",
    },
    {
      "key": "FN;CHARSET=utf-8",
      "value": "azz app",
    },
    {
      "key": "TITLE;CHARSET=utf-8",
      "value": "dev",
    },
    {
      "key": "BDAY",
      "value": "2012-12-21",
    },
    {
      "key": "ORG;CHARSET=utf-8",
      "value": "azzapp",
    },
    {
      "key": "TEL;type=HOME",
      "value": "1",
    },
    {
      "key": "TEL;type=WORK",
      "value": "2",
    },
    {
      "key": "EMAIL;INTERNET;type=HOME",
      "value": "mail@azzap.com",
    },
    {
      "key": "EMAIL;INTERNET;type=WORK",
      "value": "mailWork@azzap.com",
    },
    {
      "key": "EMAIL;INTERNET;type=WORK",
      "value": "mailEMail@azzap.com",
    },
    {
      "key": "URL",
      "value": "https://url.com",
    },
    {
      "key": "URL",
      "value": "https://url2.com",
    },
    {
      "key": "X-SOCIALPROFILE;type=home",
      "value": "https://web.azzapp.com",
    },
    {
      "key": "X-SOCIALPROFILE;type=work",
      "value": "https://facebook.com/azzapp",
    },
    {
      "key": "ADR;type=PREF;CHARSET=utf-8",
      "value": ";;monaco;;;;",
    },
    {
      "key": "ADR;type=PREF;CHARSET=utf-8",
      "value": ";;paris;;;;",
    },
  ],
  "useVCalendar": false,
}
`;

exports[`ShareContact buildVCardFromAzzappContact with avatar 1`] = `
{
  "charset": "utf-8",
  "contentType": "text/x-vcard",
  "definedElements": {
    "fullname": true,
    "name": true,
    "photo": true,
  },
  "fileExtension": "vcf",
  "filename": "vcard",
  "multiplePropertiesForElementAllowed": [
    "address",
    "email",
    "phoneNumber",
    "social",
    "url",
  ],
  "properties": [
    {
      "key": "N;CHARSET=utf-8",
      "value": ";;;;",
    },
    {
      "key": "FN;CHARSET=utf-8",
      "value": "",
    },
    {
      "key": "PHOTO;ENCODING=b;TYPE=JPEG",
      "value": "<BASE64DATA>",
    },
  ],
  "useVCalendar": false,
}
`;

exports[`ShareContact buildVCardFromAzzappContact with logo 1`] = `
{
  "charset": "utf-8",
  "contentType": "text/x-vcard",
  "definedElements": {
    "fullname": true,
    "name": true,
    "photo": true,
  },
  "fileExtension": "vcf",
  "filename": "vcard",
  "multiplePropertiesForElementAllowed": [
    "address",
    "email",
    "phoneNumber",
    "social",
    "url",
  ],
  "properties": [
    {
      "key": "N;CHARSET=utf-8",
      "value": ";;;;",
    },
    {
      "key": "FN;CHARSET=utf-8",
      "value": "",
    },
    {
      "key": "PHOTO;ENCODING=b;TYPE=JPEG",
      "value": "<BASE64DATA>",
    },
  ],
  "useVCalendar": false,
}
`;

exports[`ShareContact buildVCardFromAzzappContact with logo and avatar 1`] = `
{
  "charset": "utf-8",
  "contentType": "text/x-vcard",
  "definedElements": {
    "fullname": true,
    "name": true,
    "photo": true,
  },
  "fileExtension": "vcf",
  "filename": "vcard",
  "multiplePropertiesForElementAllowed": [
    "address",
    "email",
    "phoneNumber",
    "social",
    "url",
  ],
  "properties": [
    {
      "key": "N;CHARSET=utf-8",
      "value": ";;;;",
    },
    {
      "key": "FN;CHARSET=utf-8",
      "value": "",
    },
    {
      "key": "PHOTO;ENCODING=b;TYPE=JPEG",
      "value": "<BASE64DATA>",
    },
  ],
  "useVCalendar": false,
}
`;
